--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
+    "primevue": "^3.46.0",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-toastify": "^0.2.1"
