--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/vue-fontawesome": "^3.0.5",
     "axios": "^1.6.5",
-    "primevue": "^3.46.0",
+    "primeicons": "^6.0.1",
     "vue": "^3.3.11",
     "vue-router": "^4.2.5",
     "vue3-toastify": "^0.2.1",
